--- a/2/2.6.html
+++ b/2/2.6.html
@@ -176,7 +176,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="problemas-introductorios"><a class="header" href="#problemas-introductorios">Problemas Introductorios</a></h1>
-<p>Para familiarizarse con la programación competitiva, se sugieren los siguientes problemas introductorios:</p>
+<p>Para familiarizarse con la programación competitiva, sugerimos los siguientes problemas introductorios:</p>
 <ul>
 <li><a href="https://cses.fi/problemset/task/1617">Bit Strings</a></li>
 <li><a href="https://cses.fi/problemset/task/1754">Coin Piles</a></li>
