--- a/print.html
+++ b/print.html
@@ -177,7 +177,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="prefacio"><a class="header" href="#prefacio">Prefacio</a></h1>
-<p>El propósito de esta guía es dar una idea general sobre qué es la programación competitiva, tanto como incentivar a los estudiantes de grado de la Universidad de San Andrés a participar. De ninguna manera es completo, ya que hay una infinidad de temas que podrían aparecer en una competencia. Sin embargo, buscamos dar una visión general de los temas más importantes, junto con soluciones a problemas clásicos y otros misceláneos. Casi todos los problemas los tomamos de <a href="https://cses.fi/">CSES</a>, y recomendamos encarecidamente que el lector implemente todas las soluciones que comprenda.</p>
+<p>El propósito de esta guía es dar una idea general sobre qué es la programación competitiva, tanto como incentivar a los estudiantes de grado de la Universidad de San Andrés a participar. De ninguna manera es completa, ya que hay una infinidad de temas que podrían aparecer en una competencia. Sin embargo, buscamos dar una visión general de los temas más importantes, junto con soluciones a problemas clásicos y otros misceláneos. Casi todos los problemas los tomamos de <a href="https://cses.fi/">CSES</a>, y recomendamos encarecidamente que el lector implemente todas las soluciones que comprenda.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="1-introducción"><a class="header" href="#1-introducción">1 Introducción</a></h1>
 <p>La programación competitiva es una disciplina que se ocupa de la creación e implementación de algoritmos bajo una limitación de tiempo. Por lo general, a los concursantes se les presenta un conjunto común de problemas, que pueden tener distintos puntajes; el ganador es el concursante o equipo con mayor cantidad de puntos y menor penalidad, que suele estar dada por una combinación entre tiempo de resolución y envíos incorrectos.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="lenguajes-de-programación"><a class="header" href="#lenguajes-de-programación">Lenguajes de programación</a></h1>
@@ -186,7 +186,7 @@
 <p>Dijimos que la programación competitiva se ocupa de la <em>creación e implementación de algoritmos</em>, de todas formas, no especificamos cómo sucede esto en la competencia. Normalmente, la interacción ocurre mediante la salida estándar y entrada estándar. Es decir, nos dan un <em>input</em> por la entrada estándar y debemos responder con el <em>output</em> correcto.</p>
 <p>En C++, esto es <strong>cin</strong> para entrada y <strong>cout</strong> para salida.</p>
 <p>Como ejemplo veremos la solución para <a href="https://codeforces.com/problemset/problem/1772/A">este</a> problema:</p>
-<pre><code class="language-cpp">#include &lt;bits/stdc++.h&gt;
+<pre><code class="language-cpp">#include &lt;bits/stdc++.h&gt; // libreia estandar
 
 using namespace std;
 
@@ -216,7 +216,7 @@ int main()
 <li><strong>long long int</strong> - este es un número entero pero con el doble de bits. Se usa cuando un <strong>int</strong> no es suficiente. En nuestra opinión, este es el tipo de datos más útil y normalmente se usa de forma predeterminada, en lugar de <strong>int</strong>.</li>
 </ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="template-de-c"><a class="header" href="#template-de-c">Template de C++</a></h1>
-<p>Un aspecto clave de la programación competitiva es el tiempo: si tenés una solución correcta para un problema, pero te llevaría horas implementarla, entonces estás perdiendo tiempo que podrías usar para pensar en otros problemas. Compartimos un posible template, comentado con explicaciones.</p>
+<p>Un aspecto clave de la programación competitiva es el tiempo: si tenés una solución correcta para un problema, pero te llevaría horas implementarla, entonces estarías perdiendo tiempo que podrías usar para pensar en otros problemas. Compartimos un posible template, comentado con explicaciones.</p>
 <h2 id="macros"><a class="header" href="#macros">Macros</a></h2>
 <pre><code class="language-cpp">#define forn(i, n) for (tint i = 0; i &lt; tint(n); i++)
 #define forsn(i, s, n) for (tint i = s; i &lt; tint(n); i++)
@@ -366,7 +366,7 @@ int main(){
 <li><a href="https://codeforces.com/blog/entry/98806">How to practice Competitive Programming - Um_nik</a></li>
 </ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="problemas-introductorios"><a class="header" href="#problemas-introductorios">Problemas Introductorios</a></h1>
-<p>Para familiarizarse con la programación competitiva, se sugieren los siguientes problemas introductorios:</p>
+<p>Para familiarizarse con la programación competitiva, sugerimos los siguientes problemas introductorios:</p>
 <ul>
 <li><a href="https://cses.fi/problemset/task/1617">Bit Strings</a></li>
 <li><a href="https://cses.fi/problemset/task/1754">Coin Piles</a></li>
@@ -375,7 +375,7 @@ int main(){
 <li><a href="https://cses.fi/problemset/task/1625">Grid Paths</a></li>
 </ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="matemáticas"><a class="header" href="#matemáticas">Matemáticas</a></h1>
-<p>A diferencia de los otros temas que serán mencionados en la guía, los algoritmos de esta sección no entran dentro del temario de <em>Algoritmos y Estructuras de Datos</em>. Por eso, sugerimos que todos los miembros del equipo lean esta sección.</p>
+<p>A diferencia de los otros temas que serán mencionados en la guía, los algoritmos de esta sección no entran en el temario de la materia <em>Algoritmos y Estructuras de Datos</em>. Por eso, sugerimos que todos los miembros del equipo lean esta sección.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="divisibilidad"><a class="header" href="#divisibilidad">Divisibilidad</a></h1>
 <blockquote>
 <p>Importancia: <font color="green">Alta</font></p>
