--- a/preface.html
+++ b/preface.html
@@ -176,7 +176,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="prefacio"><a class="header" href="#prefacio">Prefacio</a></h1>
-<p>El propósito de esta guía es dar una idea general sobre qué es la programación competitiva, tanto como incentivar a los estudiantes de grado de la Universidad de San Andrés a participar. De ninguna manera es completo, ya que hay una infinidad de temas que podrían aparecer en una competencia. Sin embargo, buscamos dar una visión general de los temas más importantes, junto con soluciones a problemas clásicos y otros misceláneos. Casi todos los problemas los tomamos de <a href="https://cses.fi/">CSES</a>, y recomendamos encarecidamente que el lector implemente todas las soluciones que comprenda.</p>
+<p>El propósito de esta guía es dar una idea general sobre qué es la programación competitiva, tanto como incentivar a los estudiantes de grado de la Universidad de San Andrés a participar. De ninguna manera es completa, ya que hay una infinidad de temas que podrían aparecer en una competencia. Sin embargo, buscamos dar una visión general de los temas más importantes, junto con soluciones a problemas clásicos y otros misceláneos. Casi todos los problemas los tomamos de <a href="https://cses.fi/">CSES</a>, y recomendamos encarecidamente que el lector implemente todas las soluciones que comprenda.</p>
 
                     </main>
 
