--- a/2/2.2.html
+++ b/2/2.2.html
@@ -179,7 +179,7 @@
 <p>Dijimos que la programación competitiva se ocupa de la <em>creación e implementación de algoritmos</em>, de todas formas, no especificamos cómo sucede esto en la competencia. Normalmente, la interacción ocurre mediante la salida estándar y entrada estándar. Es decir, nos dan un <em>input</em> por la entrada estándar y debemos responder con el <em>output</em> correcto.</p>
 <p>En C++, esto es <strong>cin</strong> para entrada y <strong>cout</strong> para salida.</p>
 <p>Como ejemplo veremos la solución para <a href="https://codeforces.com/problemset/problem/1772/A">este</a> problema:</p>
-<pre><code class="language-cpp">#include &lt;bits/stdc++.h&gt; // libreia estandar
+<pre><code class="language-cpp">#include &lt;bits/stdc++.h&gt; // libreria estandar
 
 using namespace std;
 
